--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -68,10 +68,10 @@ jobs:
             host: macos-latest
             flutter_version: '3.10.5'
             go_version: '1.23'
-          - target: ios
-            host: macos-latest
-            flutter_version: '2.10.5'
-            go_version: '1.23'
+#          - target: ios
+#            host: macos-latest
+#            flutter_version: '2.10.5'
+#            go_version: '1.23'
           - target: android-arm32
             host: ubuntu-latest
             flutter_version: '3.10.5'
