--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -219,6 +219,9 @@ jobs:
         if: true && ( matrix.config.target == 'ios' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-arm32' || matrix.config.target == 'android-x86_64' )
         run: |
           go install golang.org/x/mobile/cmd/gomobile@latest
+          cd go
+          go mod tidy
+          cd ..
 
       - name: Set-Version (All)
         if: true
