--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -212,7 +212,7 @@ jobs:
         run: |
           go install github.com/go-flutter-desktop/hover@latest
           cd go
-          go mod tidy
+          go get -u github.com/ihciah/rust2go/asmcall
           cd ..
 
       - name: Install go mobile (mobile)
@@ -220,7 +220,7 @@ jobs:
         run: |
           go install golang.org/x/mobile/cmd/gomobile@latest
           cd go
-          go mod tidy
+          go get -u github.com/ihciah/rust2go/asmcall
           cd ..
 
       - name: Set-Version (All)
