--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -6,6 +6,7 @@ on:
 env:
   flutter_channel: 'stable'
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
+  RUST_TOOLCHAIN: nightly-2024-12-02
 
 jobs:
 
@@ -160,6 +161,12 @@ jobs:
           flutter-version: ${{ env.flutter_version }}
           architecture: x64
 
+      - name: Install rust toolchain
+        if: steps.check_asset.outputs.skip_build != 'true'
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ env.RUST_TOOLCHAIN }}
+
       - name: Check core
         if: steps.check_asset.outputs.skip_build != 'true'
         uses: actions/checkout@v3
@@ -234,11 +241,21 @@ jobs:
         if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'linux' || matrix.config.target == 'windows' || matrix.config.target == 'macos')
         run: |
           go install github.com/go-flutter-desktop/hover@latest
+          cd go
+          go get -u github.com/ihciah/rust2go/asmcall
+          go mod tidy
+          cd ..
 
       - name: Install go mobile (mobile)
         if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'ios' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-arm32' || matrix.config.target == 'android-x86_64' )
         run: |
           go install golang.org/x/mobile/cmd/gomobile@latest
+          cd go
+          go get -u github.com/ihciah/rust2go/asmcall
+          go mod tidy
+          gomobile init
+          go get golang.org/x/mobile/bind
+          cd ..
 
       - name: Set-Version (All)
         if: steps.check_asset.outputs.skip_build != 'true'
@@ -287,12 +304,19 @@ jobs:
       - name: Build (macos)
         if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'macos'
         run: |
+          rustup target add x86_64-apple-darwin
+          rustup target add aarch64-apple-darwin
+          cargo build --manifest-path wast/Cargo.toml --features= --lib --release --target=x86_64-apple-darwin
+          cargo build --manifest-path wast/Cargo.toml --features= --lib --release --target=aarch64-apple-darwin
+          lipo -create -output macos/libwast.a wast/target/x86_64-apple-darwin/release/libwast.a  wast/target/aarch64-apple-darwin/release/libwast.a
           hover build darwin-dmg
           mv go/build/outputs/darwin-dmg-release/*.dmg build/build.dmg
 
       - name: Build (linux)
         if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'linux'
         run: |
+          rustup target add x86_64-unknown-linux-gnu
+          cargo build --manifest-path wast/Cargo.toml --features= --lib --release --target=x86_64-unknown-linux-gnu
           curl -JOL https://github.com/junmer/source-han-serif-ttf/raw/master/SubsetTTF/CN/SourceHanSerifCN-Regular.ttf
           mkdir -p fonts
           mv SourceHanSerifCN-Regular.ttf fonts/Roboto.ttf
@@ -308,21 +332,36 @@ jobs:
       - name: Build (ios)
         if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'ios'
         run: |
+          rustup target add aarch64-apple-ios
+          cargo build --manifest-path wast/Cargo.toml --features= --lib --release --target=aarch64-apple-ios
+          cp wast/target/aarch64-apple-ios/release/libwast.a ios/
           sh scripts/build-ipa.sh
 
       - name: Build (android-arm32)
         if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'android-arm32'
         run: |
+          rustup target add armv7-linux-androideabi
+          cd wast
+          cargo ndk -o ../android/app/src/main/jniLibs -t armeabi-v7a build
+          cd ..
           sh scripts/build-apk-arm.sh
 
       - name: Build (android-arm64)
         if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'android-arm64'
         run: |
+          rustup target add aarch64-linux-android
+          cd wast
+          cargo ndk -o ../android/app/src/main/jniLibs -t arm64-v8a build
+          cd ..
           sh scripts/build-apk-arm64.sh
 
       - name: Build (android-x86_64)
         if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'android-x86_64'
         run: |
+          rustup target add x86_64-linux-android
+          cd wast
+          cargo ndk -o ../android/app/src/main/jniLibs -t x86_64 build
+          cd ..
           sh scripts/build-apk-x64.sh
 
       - name: Sign APK (Android)
