--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   flutter_channel: 'stable'
-  GH_TOKEN: ${{ secrets.GH_TOKEN }}
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   RUST_TOOLCHAIN: nightly-2024-12-02
 
 jobs:
