--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   flutter_channel: 'stable'
-  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   RUST_TOOLCHAIN: nightly-2024-12-02
 
 jobs:
@@ -142,7 +142,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: 'niuhuan/wax-go-core'
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           path: 'go'
 
       - name: Cache Flutter dependencies (Linux/Android)
@@ -264,7 +264,7 @@ jobs:
           rustup target add x86_64-pc-windows-gnu
           cargo build --manifest-path=wast/Cargo.toml --release --target x86_64-pc-windows-gnu
           hover build windows
-          curl -JOL https://github.com/niuhuan/static-resources/releases/download/windows_build_tools/Resource_Hacker_5.1.8.zip
+          curl -JOL https://github.com/ComicSparks/build-tools/releases/download/storage/Resource_Hacker_5.1.8.zip
           Expand-Archive .\Resource_Hacker_5.1.8.zip
           cmd /c "Resource_Hacker_5.1.8\ResourceHacker.exe" -open go\build\outputs\windows-release\wax.exe -save go\build\outputs\windows-release\wax.exe -action addskip -res go/assets/icon.ico -mask ICONGROUP,MAINICON,0
           cp wast/target/x86_64-pc-windows-gnu/release/wast.dll go/build/outputs/windows-release/
