--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   flutter_channel: 'stable'
-  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   RUST_TOOLCHAIN: nightly-2024-12-02
 
 jobs:
@@ -175,7 +175,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: 'niuhuan/wax-go-core'
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           path: 'go'
 
       - name: Cache Flutter dependencies (Linux/Android)
